# boring_json

./: .clang-format  CMakeLists.txt  README.md
cmake/: esp.cmake  linux.cmake  run_expected_compile_failure.cmake  zephyr.cmake
docs/plans/: 2026-03-08-c11-type-safe-macros.md  2026-03-09-typed-object-array-macros.md
include/: boring_json.h  boring_json_debug.h  boring_json_mem_writer.h  boring_json_simple_writer.h
src/: boring_json.c  boring_json_decode.c  boring_json_encode.c  boring_json_mem_writer.c  boring_json_simple_writer.c
test/: runner.c  test_decode.c  test_encode.c  test_macro_compile_fail.c
